--- a/Assignment 06/index.html
+++ b/Assignment 06/index.html
@@ -32,7 +32,7 @@
         </div>
       </nav>
     </header>
-    <!-- Hero Section -->
+    <!-- Hero Section code -->
 
     <div class="background1 image-fluid">
       <div class="container d-flex pb-5">
